--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.1",
-	"minAppVersion": "0.12.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
+	"id": "obsidian-note-autocreator",
+	"name": "Note Auto Creator",
+	"version": "0.0.1",
+	"minAppVersion": "0.14.6",
+	"description": "This plugin makes it possible to automatically create notes when links are created to them.",
+	"author": "Simon T. Clement",
+	"authorUrl": "https://simontc.com",
 	"isDesktopOnly": false
 }
