--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@typescript-eslint/parser": "^5.2.0",
 		"builtin-modules": "^3.2.0",
 		"esbuild": "0.13.12",
+		"jest": "^28.1.0",
 		"obsidian": "latest",
 		"tslib": "2.3.1",
 		"typescript": "4.4.4"
