--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"jest": "^28.1.0",
 		"obsidian": "latest",
 		"tslib": "2.3.1",
-		"typescript": "4.4.4"
+		"typescript": "4.4.4",
+		"esbuild-plugin-copy-file": "^0.0.2"
 	}
 }
