--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/jest": "^27.5.0",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
 		"@typescript-eslint/parser": "^5.2.0",
 		"builtin-modules": "^3.2.0",
 		"esbuild": "0.13.12",
+		"esbuild-plugin-copy-file": "^0.0.2",
 		"jest": "^28.1.0",
 		"obsidian": "latest",
+		"ts-jest": "^28.0.1",
 		"tslib": "2.3.1",
-		"typescript": "4.4.4",
-		"esbuild-plugin-copy-file": "^0.0.2"
+		"typescript": "^4.4.4"
 	}
 }
