--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@faker-js/faker": "^6.3.1",
 		"@types/jest": "^27.5.0",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "^5.2.0",
