--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"builtin-modules": "^3.2.0",
 		"esbuild": "0.13.12",
 		"esbuild-plugin-copy-file": "^0.0.2",
+		"eslint": "^8.15.0",
 		"jest": "^28.1.0",
 		"obsidian": "latest",
 		"ts-jest": "^28.0.1",
