--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,8 @@
       "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
       "@typescript-eslint/ban-ts-comment": "off",
       "no-prototype-builtins": "off",
-      "@typescript-eslint/no-empty-function": "off"
-    } 
+      "@typescript-eslint/no-empty-function": "off",
+	  "semi": "off",
+	  "no-unexpected-multiline": "error"
+	}
   }
