--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,7 @@
       "@typescript-eslint/ban-ts-comment": "off",
       "no-prototype-builtins": "off",
       "@typescript-eslint/no-empty-function": "off",
-	  "semi": "off",
+	  "semi": [2, "never"],
 	  "no-unexpected-multiline": "error"
 	}
   }
