--- a/.gitignore
+++ b/.gitignore
@@ -24,13 +24,8 @@ data.json
 # Do not exclude the main.js file from hot-reload since that is needed to enable hot reload
 !**/hot-reload/main.js
 
-# Exclude copied plugin files
-/tests/**/obsidian-note-autocreation/styles.css
-/tests/**/obsidian-note-autocreation/manifest.json
-/tests/**/obsidian-note-autocreation/main.js
-
 # Exclude anything in the Release folder
 /Release/*
 
-# Exclude markdown files in the test vault
-/tests/Note Auto Creation Test Vault/**/*.md
+# Exclude everything in the test vault
+/tests/Note Auto Creation Test Vault/*
