--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
 		"ts-jest": "^28.0.1",
 		"tslib": "2.3.1",
 		"typescript": "^4.4.4"
+	},
+	"dependencies": {
+		"@popperjs/core": "^2.11.6"
 	}
 }
